accordeon component overflow bug fixed

--- a/main.scss
+++ b/main.scss
@@ -6,6 +6,7 @@ body {
   --background: #212121;
   --primary: rgb(24, 177, 98);
   --text-gray: rgb(200, 200, 200);
+  --sidenav-width: 230px;
   color: aliceblue;
   background-color: var(--background);
 }
